update GitHub Actions workflow to trigger on main branch instead of version tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,8 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - 'v*'  # Déclenche le workflow quand un tag commençant par 'v' est poussé
-
+    branches:
+      - main
 jobs:
   build:
     name: Build and Release
