--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,70 +2,65 @@ name: Build and Release
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'  # Déclenche le workflow uniquement quand un tag version est poussé
+
 jobs:
   build:
     name: Build and Release
-    runs-on: windows-latest
+    runs-on: ubuntu-latest  # Utilise un runner Linux qui est plus léger et rapide
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: '1.21'
 
+      - name: Extract tag version
+        id: tag
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: |
-          cd client
+          cd client/cli
           go mod tidy
-          cd cli
-          go mod tidy
-          cd ..
 
-      - name: Build CLI Client
+      # Compile pour Windows
+      - name: Build CLI Client for Windows
         run: |
           cd client/cli
-          go build -o ../../SushiSyncCLI.exe
+          GOOS=windows GOARCH=amd64 go build -o ../../SushiSyncCLI-windows-amd64.exe -ldflags "-X main.version=${{ env.VERSION }}"
         env:
           CGO_ENABLED: 0
 
-      - name: Build GUI Client
+      # Compile pour Linux
+      - name: Build CLI Client for Linux
         run: |
-          cd client
-          go build -tags nocgo -o ../SushiSyncGUI.exe
+          cd client/cli
+          GOOS=linux GOARCH=amd64 go build -o ../../SushiSyncCLI-linux-amd64 -ldflags "-X main.version=${{ env.VERSION }}"
+        env:
+          CGO_ENABLED: 0
+
+      # Compile pour macOS
+      - name: Build CLI Client for macOS
+        run: |
+          cd client/cli
+          GOOS=darwin GOARCH=amd64 go build -o ../../SushiSyncCLI-darwin-amd64 -ldflags "-X main.version=${{ env.VERSION }}"
         env:
           CGO_ENABLED: 0
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: Release ${{ env.VERSION }}
           draft: false
           prerelease: false
-
-      - name: Upload CLI Client
-        uses: actions/upload-release-asset@v1
+          files: |
+            SushiSyncCLI-windows-amd64.exe
+            SushiSyncCLI-linux-amd64
+            SushiSyncCLI-darwin-amd64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./SushiSyncCLI.exe
-          asset_name: SushiSyncCLI.exe
-          asset_content_type: application/octet-stream
-
-      - name: Upload GUI Client
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./SushiSyncGUI.exe
-          asset_name: SushiSyncGUI.exe
-          asset_content_type: application/octet-stream
