--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Déclenche le workflow à chaque push sur la branche main
 
+permissions:
+  contents: write  # Nécessaire pour créer des releases et pousser des tags
+
 jobs:
   build:
     name: Build and Release
@@ -18,8 +21,8 @@ jobs:
         with:
           go-version: '1.21'
 
-      - name: Get short SHA
-        id: slug
+      - name: Define version
+        id: version
         run: echo "VERSION=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
 
       - name: Install dependencies
